src/test/deca/context/invalid/created/Objet/Passe_2/DifferentMethodSignature.deca
// Description:
//    teste la redefinition de methode avec une signature differente
// Resultats:
//    DifferentMethodSignature.deca:13:4: Error: redefinition of a method with a different signature

class C {
    int getx(int a, boolean b) {

    }
}

class D extends C {
    int getx(float a, int b) {

    }
}

{

}